--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 1. PERMISOS UNIFICADOS -->
+    <!-- Todos los permisos deben estar aquí, directamente bajo <manifest> -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Declara que la app puede usar la cámara, pero no es obligatoria para instalarla -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
+    <!-- 2. UNA SOLA ETIQUETA <application> CON TODOS LOS ATRIBUTOS -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +19,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HuertoHogarKotlinx">
+        android:theme="@style/Theme.HuertoHogarKotlinx"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+
+        <!-- 3. UNA SOLA DECLARACIÓN DE <activity> -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -21,10 +32,10 @@
             android:theme="@style/Theme.HuertoHogarKotlinx">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
