--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,9 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Signing Config Secrets
+MY_RELEASE_STORE_FILE=C:/Users/fortn/Documents/app/huertohogar-keystore.jks
+MY_RELEASE_STORE_PASSWORD=123123
+MY_RELEASE_KEY_ALIAS=huertohogar-key
+MY_RELEASE_KEY_PASSWORD=123123
